# codeschool

./: manage.py  setup.cfg  setup.py.old  tasks-2.py  tasks.py  tox.ini
local/: settings.py
local/db/: db.sqlite3
src/codeschool/: __init__.py  all.py
src/codeschool/cli/: utils.py
src/codeschool/config/: jinja2.py  urls.py
src/codeschool/fixes/: __init__.py  django_old_apis.py
src/codeschool/hyper/: iospec.py
src/cs_account/accounts/: models.py
src/cs_account/users/: api.py  bricks.py  models.py  permissions.py  serializers.py  token.py  urls.py  views.py
src/cs_classroom/classrooms/: apps.py  factories.py  managers.py  mixins.py  models.py  rules.py  urls.py  views.py
src/cs_classroom/timeline/: apps.py  models.py
src/cs_core/debug/: factories.py
src/cs_extra/attendance/: admin.py  apps.py  forms.py  models.py
src/cs_lms/_activities/: bricks.py
src/cs_lms/activity_lists/: bricks.py  views.py
src/cs_lms/attendance/: models.py
src/cs_lms/calendars/: models.py
src/cs_questions/base/: admin.py  apps.py  bricks.py  models.py  serlializers.py  views.py
src/cs_questions/code/: admin.py  apps.py  models.py
src/cs_questions/coding_io/: admin.py  apps.py  ejudge.py  factories.py  forms.py  loaders.py  validators.py
src/cs_questions/form/: apps.py  models.py
src/cs_questions/free_form/: admin.py  apps.py  models.py
src/cs_questions/graders/: apps.py
src/cs_questions/multiple_choice/: apps.py  models.py
src/cs_questions/numeric/: admin.py  apps.py  factories.py  models.py
src/cs_questions/text/: __init__.py  (+3 more)
tests/: conftest.py
(+286 files in other folders)
