[metadata]
name = Codeschool
version = 1.0.0
description = An environment for teaching programming for 21st century students
long_description = file: README.rst

author = Fábio Macêdo Mendes
author_email = fabiomacedomendes@gmail.com
url = https://github.com/fabiommendes/codeschool

keywords =
    compiler
    functional programming
license = GNU General Public License (GPL)
classifiers =
    Development Status :: 4 - Beta
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Framework :: Django :: 2.0

[options]
zip_safe = False
platforms = any
include_package_data = True
install_requires =
    django-boogie[project]
    djangorestframework
    pygments

setup_requires =
    setuptools >= 30.3.0

[options.extras_require]
dev =
    manuel >= 1.9.0
    pytest >= 3.4.2
    pytest-cov >= 2.5.1
    coverage >= 4.4.1
    mock >= 2.0.0
    ipython
    flake8
    invoke
    tox
docs =
    docutils
    sphinx-autobuild


[egg_info]
tag_build = 0
tag_date = 0
tag_svn_revision = 0
